--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 body{
     min-height: 100vh;
     background-color: rgb(26, 26, 27);
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
+    font-family: Muli,Helvetica Neue,Arial,sans-serif;;
 
 }
 #fav-list{
@@ -77,7 +78,7 @@ body{
 
 
 #card {
-    background-color: black;
+    background-color: red;
     padding: 10px;
     color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -93,7 +94,7 @@ body{
     width: 100%;
     padding: 20px;
     border-radius: 20px;
-    background-color:black ;
+    background-color:red ;
     color: white;
 }
 #meal-header{
@@ -118,11 +119,4 @@ body{
 }
 .col-md-12{
     color: white;
-}
-
-
-
-/* favourites offcanvus */
-#favourites-body{
-    background-color:#212529 ;
 }
