--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body{
     border-radius: 3rem;
     
 }
+@media screen and (max-width: 480px) {
+    #search-container{
+        width: 60%;
+    }
+  }
+
 #search-container #search{
     width: 100%;
     height: 100%;
